syntax = "proto3";
package corepb;

message Transaction{
    bytes ID = 1;
    repeated TXInput Vin = 2;
    repeated TXOutput Vout = 3;
    int64 Tip = 4;
}

message TXInput{
    bytes Txid = 1;
    int32 Vout = 2;
    bytes Signature = 3;
    bytes PubKey = 4;
}

message TXOutput{
    int32 Value = 1;
    bytes PubKeyHash = 2;
}
